--- a/wallet/package.json
+++ b/wallet/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -39,9 +42,9 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.41",
+    "react-error-overlay": "6.0.9",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1",
-    "react-error-overlay": "6.0.9"
+    "vite": "^5.3.1"
   }
 }
